Fixed images size on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -122,6 +122,7 @@
     .col-1 img,
     .col-1 .col img {
         width: 100%;
+        height: 100%;
         max-width: 400px;
         padding-top: var(--margin-large-y);
         padding-bottom: var(--margin-large-y);
@@ -140,6 +141,7 @@
 
     .col-2 img {
         width: 100%;
+        height: 100%;
         max-width: 400px;
         padding-top: var(--margin-large-y);
         padding-bottom: var(--margin-large-y);
@@ -158,6 +160,7 @@
 
     .col-3 img {
         width: 100%;
+        height: 100%;
         max-width: 400px;
         padding-top: var(--margin-large-y);
         padding-bottom: var(--margin-large-y);
